crates/vize_atelier_sfc/src/compile/tests/snapshots/vize_atelier_sfc__compile__tests__vapor__script_setup_sfc_vapor_output_mode.snap
---
source: crates/vize_atelier_sfc/src/compile/tests/vapor.rs
expression: result.code.as_str()
---
import { defineVaporComponent as _defineVaporComponent, proxyRefs as _proxyRefs } from 'vue'
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';

const t0 = _template("<div>   </div>", true)

function render(_ctx, $props, $emit, $attrs, $slots, $setup) {
  const n0 = t0()
  const x0 = _txt(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(_ctx.count) + " " + _toDisplayString(_ctx.doubled)))
  return n0
}
const __vaporRender = render

import { computed, ref } from 'vue'


export default /*@__PURE__*/_defineVaporComponent({
  __name: 'anonymous',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {

const count = ref(1)
const doubled = computed(() => count.value * 2)

const __returned__ = { computed, ref, count, doubled }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __ctx = _proxyRefs(__returned__)
return __vaporRender(__ctx, __props, __emit, __attrs, __slots, __returned__)
}

})
