crates/vize_atelier_sfc/src/compile/tests/snapshots/vize_atelier_sfc__compile__tests__vapor__script_setup_sfc_vapor_slot_outlet.snap
---
source: crates/vize_atelier_sfc/src/compile/tests/vapor.rs
expression: result.code.as_str()
---
import { defineVaporComponent as _defineVaporComponent, proxyRefs as _proxyRefs } from 'vue'
import { createSlot as _createSlot, insert as _insert, template as _template } from 'vue';

const t0 = _template("<div></div>", true)

function render(_ctx, $props, $emit, $attrs, $slots, $setup) {
  const n1 = t0()
  const n0 = _createSlot()
  _insert(n0, n1)
  return n1
}
const __vaporRender = render

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'anonymous',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {


const __returned__ = {  }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __ctx = _proxyRefs(__returned__)
return __vaporRender(__ctx, __props, __emit, __attrs, __slots, __returned__)
}

})
